<resources>
    <string name="app_name">Controle-Alugueis</string>
    <string name="button_imoveis">Imóveis</string>
    <string name="button_clientes">Clientes</string>
    <string name="button_alugueis">Alugueis</string>
    <string name="endereco">Endereço:</string>
    <string name="custo">Custo:</string>
    <string name="area">Area:</string>
    <string name="quartos">Quartos:</string>
    <string name="suites">Suites:</string>
    <string name="vagasest">Vagas de estacionamento</string>
    <string name="radio_kit">Kitchenette</string>
    <string name="radio_casa">Casa Padrao</string>
    <string name="radio_ap">Apartamento</string>
    <string name="radio_casaCond">Casa Condominio</string>
    <string name="excluiImovel">Excluir</string>
    <string name="salvaImovel">Salvar</string>
    <string name="nome_cliente">Nome:</string>
    <string name="idade_cliente">Idade:</string>
    <string name="imovel_text" />
    <string name="imovel_text2">Selecione um imóvel:</string>
    <string name="cliente_text2">Selecione um cliente:</string>
    <string name="aluga_imovel">Alugar</string>
    <string name="inicio_aluguel">Início</string>
    <string name="termino_aluguel">Término</string>
    <string name="botao_extras">Extras</string>
    <string name="botao_relatorio_alugueis">Relatório</string>
    <string name="botao_relatorio">Relatório</string>
    <string name="relatorio_periodo">Mes</string>
    <string name="gerar_relatorio">Gerar Relatório</string>
    <string name="texto_botao_extendido">Ações</string>
    <string name="relatorio_imoveis">Relatorio dos imóveis</string>
    <string name="add_imovel">Adicionar</string>
    <string name="texto_relatorio_imovel">Relatório</string>
    <string name="switch_seguro">Seguro</string>
    <string name="switch_chave">Chave extra</string>
    <string name="switch_mobiliado">Mobiliado</string>
    <string name="atualizar_aluguel">Atualizar</string>
    <string name="texto_boasvindas">Bem-vindo ao Controle de Aluguéis v2.0 :)</string>
    <string name="categoria_imovel">Categoria:</string>
    <string name="vagas2_label">Vagas:</string>
    <string-array name="extras_aluguel">
        <item>Seguro</item>
        <item>Chave extra</item>
        <item>Mobiliado</item>
    </string-array>
</resources>