<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_boasvindas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/rent__2_" />

    <Button
        android:id="@+id/button_imoveis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="24dp"
        android:onClick="entra_imoveis"
        android:text="@string/button_imoveis"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_clientes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="entra_clientes"
        android:text="@string/button_clientes"
        app:layout_constraintBottom_toBottomOf="@+id/button_imoveis"
        app:layout_constraintEnd_toStartOf="@+id/button_alugueis"
        app:layout_constraintStart_toEndOf="@+id/button_imoveis"
        app:layout_constraintTop_toTopOf="@+id/button_imoveis" />

    <Button
        android:id="@+id/button_alugueis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:onClick="entra_alugueis"
        android:text="@string/button_alugueis"
        app:layout_constraintBottom_toBottomOf="@+id/button_clientes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_clientes" />

</androidx.constraintlayout.widget.ConstraintLayout>